# hexlet-pytest

./: .coverage  example.py  pyproject.toml
tests/: test_stack.py
